fixed spacing

--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,5 +1,6 @@
 .trapani__header {
   display: flex;
+  padding: 0 5rem 0 5rem;
 }
 
 .trapani__header-content {
@@ -35,6 +36,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 0 4rem 0;
 }
 
 .trapani__header-image img {
